# og_classbot

./: .gitignore  Dockerfile  README.md  RUN_ME.py  docker-compose.yml  pyproject.toml  sample.env  student_info.env  student_info.env.sample
chatbot/: __init__.py
chatbot/ai/assistants/paper_chatter/: paper_chatter.py  (+1 more)
chatbot/ai/vector_embeddings/: create_vector_store.py  plot_vector_clusters.py  vector_store.py
chatbot/ai/workers/: green_check_thread_handler.py  student_stats_grabber.py
chatbot/assistants/: course_assistant.py  student_interviewer.py
chatbot/assistants/course_assistant/: course_assistant.py  course_assistant_prompt.py
chatbot/assistants/student_interview_assistant/: student_interview_assistant.py  student_interview_prompt_templates.py
chatbot/bots/workers/: green_check_thread_handler.py  student_stats_grabber.py  thread_summarizer.py
chatbot/discord_bot/: discord_bot_main.py
chatbot/discord_bot/cogs/: chat_cog.py  summarizer_cog.py  summary_sender_cog.py  video_chatter_cog.py
chatbot/discord_bot/utilities/: bot_maker.py  discord_bot.py
chatbot/flask_frontend/: flask_main.py
chatbot/langchain_stuff/agents/: agent.py  get_available_agents.py
chatbot/langchain_stuff/indexing/: create_index.py  lecture_1_transcript.txt
chatbot/langchain_stuff/llm_chain/: course_assistant.py  course_assistant_llm_chain.py  student_interviewer.py
chatbot/mongo_database/: connect_mongo_cloud.py  database.py  mongo_database_manager.py
chatbot/mongo_database/utilities/: connect_usernames_with_names.py
chatbot/reports/: json_to_html.py  json_to_markdown.py
chatbot/student_info/: create_student_profiles_collection.py  find_student_name.py  load_student_info.py
chatbot/student_info/student_profiles/: create_student_profiles_collection.py  student_profile_models.py
chatbot/system/: environment_variables.py  filenames_and_paths.py  find_student_name.py  get_external_info.py
chatbot/system/logging/: configure_logging.py
chatbot/tests/: test_mongo_database_manager.py
chatbot/utilities/: directory_printer.py  grab_all_py_in_one_text_block.py  merge_csv.py  quine.py  replace_tags_with_links.py
notes/: final_write_up.md
src/discord_bot/: discord_bot_main.py
src/langchain_stuff/agents/: agent.py
src/langchain_stuff/indexing/: create_index.py
src/openai_stuff/: openai_utils.py
(+64 files in other folders)
