[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "an ai-enabled chatbot"
authors = ["jonmatthis <jonmatthis@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"
pymongo = "^4.3.3"
py-cord = "^2.4.1"
toml = "^0.10.2"
dnspython = "^2.3.0"
rich = "^13.3.5"
anthropic = "^0.2.9"
langchain = "^0.0.190"
openai = "^0.27.7"
Markdown = "^3.4.3"
pandas = "^2.0.2"
motor = "^3.2.0"
plotly = "^5.15.0"
dash = "^2.11.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

